--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -6,11 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "heroku-prebuild": "npm install --dev",
-    "start": "node server.js",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "postinstall": "npm run build"
+    "start": "npm run dev",
+    "build": "node build/build.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
@@ -18,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
+    "jquery": "^3.4.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -34,7 +32,6 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
-    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
